Add "baseUrl": "src" and "esModuleInterop": true, for imports

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,12 +16,16 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "esModuleInterop": true,
 
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    /*Absolute path*/
+    "baseUrl": "src"
   },
   "include": ["src"]
 }
